# pyreefscape

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  chassis.py  ids.py  physics.py  pyproject.toml  robot.py  vision.py
.github/workflows/: ci.yml
autonomous/: algae_only_auto_base.py  auto.py  auto_base.py  base.py  centre_auto.py  coral_auto.py  coral_auto_base.py  multi_algae_auto.py  test_base.py
autonomous/traj/: Coral.traj  New Path.traj  coral.chor
components/: algae_manipulator.py  balistics_component.py  ballistics.py  chassis.py  climber.py  coral_depositor.py  coral_placer.py  coral_shooter.py  feeler.py  injector.py  intake.py  led_component.py  manipulator.py  shooter.py  tilter_component.py  vision.py  wrist.py  wrist_component.py
controllers/: algae_intake.py  algae_measurement.py  algae_shooter.py  climber.py  coral_placer.py  feeler.py  floor_intake.py  manipulator_inject.py  manipulator_intake.py  manipulatorexhale.py  manipulatorinhale.py  reef_intake.py
deploy/choreo/: .gitattributes  AlgaeABToShoot.traj  AlgaeCDToShoot.traj  AlgaeEFToShoot.traj  AlgaeFirst.traj  AlgaeGH180.traj  AlgaeGHToShoot.traj  AlgaeGHToShootGH.traj  AlgaeIJToShoot.traj  AlgaeIJToShootIJ.traj  AlgaeJI180.traj  AlgaeJIToShoot.traj  AlgaeKLToShoot.traj  AlgaeKLToShootKL.traj  AlgaeOnly.traj  AllReefCoralPoints.traj  BranchCToAlgaeCD.traj  BranchFToAlgaeEF.traj  BranchGToAlgaeGH.traj  BranchHToAlgaeGH.traj  BranchHToAlgaeJI.traj  BranchLToAlgaeKL.traj  Coral.chor  CurveLessJiggleTest.traj  CurveRotateTest.traj  LineLessJiggleTest.traj  LineRotateTest.traj  RefinedAlgaeEFToShoot.traj  RefinedAlgaeGHToShootGH.traj  RefinedAlgaeIJToShootIJ.traj  RefinedAlgaeKLToShootKL.traj  RefinedShootGHToAlgaeIJ.traj  RefinedShootGHToAlgaeIJ2.traj  RefinedShootIJToAlgaeKL.traj  ShootGHToAlgaeIJ.traj  ShootIJToAlgaeKL.traj  ShootToAlgaeAB.traj  ShootToAlgaeCD.traj  ShootToAlgaeEF.traj  ShootToAlgaeGH.traj  (+17 more)
deploy/traj/: Coral.traj  Coral_blue.traj  Coral_reflected.chor  Coral_reflected.traj  final_auto_route.chor  final_auto_route.traj
tests/: autonomous_test.py  fuzz_test.py  pyfrc_test.py  test_caching.py  test_constrain_angle.py  test_functions.py  test_game.py  test_led.py  test_scalers.py
tests/logs/: FRC_20240519_053213.wpilog  FRC_20240519_054824.wpilog  FRC_20240519_063231.wpilog  FRC_20240519_063410.wpilog  FRC_20240617_084719.wpilog  FRC_20240617_084856.wpilog  FRC_20240617_085013.wpilog  FRC_20240617_085116.wpilog  FRC_20240617_090306.wpilog  FRC_20240618_075839.wpilog  FRC_20240622_005426.wpilog  FRC_20240622_010544.wpilog  FRC_20240622_062328.wpilog  FRC_TBD_4993bfc6c3d9d8b3.wpilog
utilities/: caching.py  ctre.py  functions.py  game.py  position.py  rev.py  scalers.py  state_space.py
